--- a/SWAGLibrary/Base.lproj/Main.storyboard
+++ b/SWAGLibrary/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="1qs-xz-8Gq">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -52,6 +52,7 @@
                                         <connections>
                                             <outlet property="authorLabel" destination="i3D-a7-Idm" id="9kv-Ss-eHr"/>
                                             <outlet property="titleLabel" destination="1Bg-GI-EMJ" id="uwu-JC-ynL"/>
+                                            <segue destination="qrI-jX-rlR" kind="showDetail" identifier="showDetail" action="showViewController:sender:" id="Ke3-Zv-2ja"/>
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
@@ -59,18 +60,21 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <navigationItem key="navigationItem" id="9Rl-5k-0yd">
+                        <barButtonItem key="leftBarButtonItem" systemItem="add" id="5cl-6t-Ywb"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="tableView" destination="f0H-fU-rgz" id="WsA-5L-LjV"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="136.80000000000001" y="116.49175412293854"/>
+            <point key="canvasLocation" x="1076" y="116.49175412293854"/>
         </scene>
-        <!--View Controller-->
+        <!--DetailVC-->
         <scene sceneID="1ir-s3-w0W">
             <objects>
-                <viewController id="qrI-jX-rlR" sceneMemberID="viewController">
+                <viewController id="qrI-jX-rlR" customClass="DetailVC" customModule="SWAGLibrary" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="kHh-ze-DPp"/>
                         <viewControllerLayoutGuide type="bottom" id="UET-3g-yth"/>
@@ -118,14 +122,25 @@
                                 <rect key="frame" x="136" y="426" width="66" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Checkout"/>
+                                <connections>
+                                    <action selector="checkoutTapped:" destination="qrI-jX-rlR" eventType="touchUpInside" id="8vG-sk-I7u"/>
+                                </connections>
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
+                    <toolbarItems/>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="authorLabel" destination="X9w-qH-cLx" id="Evd-be-K5B"/>
+                        <outlet property="checkedOutLabel" destination="2JC-RG-2MM" id="qv9-t1-7La"/>
+                        <outlet property="publisherLabel" destination="oMs-af-4l6" id="up0-BA-HAx"/>
+                        <outlet property="titleLabel" destination="WMw-n3-DA8" id="5sl-hk-uDy"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gfE-Dn-V8W" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="917.60000000000002" y="115.59220389805098"/>
+            <point key="canvasLocation" x="1856.8" y="115.59220389805098"/>
         </scene>
         <!--View Controller-->
         <scene sceneID="Eo1-Vp-xyy">
@@ -178,7 +193,25 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="slm-GB-ZEU" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1684" y="115.59220389805098"/>
+            <point key="canvasLocation" x="2623.1999999999998" y="115.59220389805098"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="eWz-dl-d9r">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1qs-xz-8Gq" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="kji-Y6-az5">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="Jht-8N-kBu"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ukb-iB-czj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="116.49175412293854"/>
         </scene>
     </scenes>
 </document>
